# HonglabVulkan

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeLists_MacOS.txt  CMakeLists_test_tracy.txt  Directory.Build.props  HonglabVulkan.sln  README.md  Tracy.props  test_tracy.cpp  vcpkg.json  vcpkg_linux.json
Engine/: Animation.cpp  Application.h  BarrierHelper.cpp  BarrierHelper.h  CMakeLists.txt  Camera.cpp  Camera.h  CommandBuffer.cpp  CommandBuffer.h  Context.cpp  Context.h  DepthStencil.cpp  DepthStencil.h  DescriptorSet.cpp  Engine.vcxproj  Engine.vcxproj.filters  GuiRenderer.cpp  GuiRenderer.h  Image2D.cpp  Image2D.h  MappedBuffer.h  Material.cpp  Mesh.h  Model.cpp  ModelNode.h  Pipeline.cpp  Pipeline.h  PipelineCompute.cpp  PipelinePbrDeferred.cpp  PipelinePbrForward.cpp  PipelinePost.cpp  PipelineSky.cpp  PushConstants.h  ResourceBinding.cpp  ResourceBinding.h  Sampler.cpp  Shader.cpp  ShaderManager.cpp  ShadowMap.h  SkyTextures.h  (+8 more)
appendix/: appendix.sln
appendix/App01_PointerVsReference/: App01_PointerVsReference.cpp  App01_PointerVsReference.vcxproj  App01_PointerVsReference.vcxproj.filters
appendix/App02_Pool/: App02_Pool.cpp  App02_Pool.vcxproj  App02_Pool.vcxproj.filters
appendix/App03_Factory/: App03_Factory.cpp  App03_Factory.vcxproj  App03_Factory.vcxproj.filters
appendix/App04_PImpl/: App04_PImpl.cpp  App04_PImpl.vcxproj  App04_PImpl.vcxproj.filters
appendix/App05_MoveSemantics/: App05_MoveSemantics.cpp  App05_MoveSemantics.vcxproj  App05_MoveSemantics.vcxproj.filters
appendix/App06_InheritanceVsCompisition/: App06_InheritanceVsCompisition.cpp  App06_InheritanceVsCompisition.vcxproj  App06_InheritanceVsCompisition.vcxproj.filters
assets/: assets.vcxproj  assets.vcxproj.filters
assets/shaders/: deferredLighting.comp  deferredLighting.comp.spv  pbrDeferred.frag  pbrDeferred.frag.spv  pbrForward.frag  pbrForward.frag.spv  pbrForward.vert  pbrForward.vert.spv  post.frag  post.frag.spv  post.vert  shadowMap.vert  shadowMap.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  ssao.comp  ssao.comp.spv  test.comp  test.comp.spv
docs/: F16_Migration_Summary.md  F16_Vertex_Guide.md  Legacy_Removal_Summary.md  Shader_Reflection_Removal.html  UPDATE.html  vkDestroyBuffer_analysis.html
engine/: Animation.h  Application.cpp  Application.h  BindingInfo.h  CMakeLists.txt  Camera.cpp  CommandBuffer.cpp  ComputePipeline.h  Context.cpp  Context.h  DeferredLightingPipeline.h  DepthStencil.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  Engine.vcxproj  Engine.vcxproj.filters  GpuTimer.cpp  GpuTimer.h  GuiPipeline.h  GuiRenderer.cpp  GuiRenderer.h  Image2D.cpp  Image2D.h  Logger.cpp  Logger.h  MappedBuffer.cpp  MappedBuffer.h  Material.h  Mesh.cpp  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  ModelNode.cpp  PbrDeferredPipeline.h  Pipeline.cpp  Pipeline.h  PipelineCompute.cpp  (+46 more)
engine/Engine/: ResourceBase.h
examples/: CMakeLists.txt  f16_vertex_example.cpp
examples/Ex01_Context/: CMakeLists.txt  Ex01_Context.cpp  Ex01_Context.vcxproj  Ex01_Context.vcxproj.filters  log.txt
examples/Ex02_Compute/: CMakeLists.txt  Ex02_Compute.cpp  Ex02_Compute.vcxproj  Ex02_Compute.vcxproj.filters  log.txt
examples/Ex03_ShaderReflection/: Ex03_ShaderReflection.cpp  Ex03_ShaderReflection.vcxproj  Ex03_ShaderReflection.vcxproj.filters  log.txt
examples/Ex03_Triangle13/: CMakeLists.txt  Ex03_Triangle13.cpp  Ex03_Triangle13.vcxproj  Ex03_Triangle13.vcxproj.filters
examples/Ex04_Triangle11/: CMakeLists.txt  Ex04_Triangle11.cpp  Ex04_Triangle11.vcxproj  Ex04_Triangle11.vcxproj.filters  log.txt
examples/Ex05_ShaderReflection/: CMakeLists.txt  Ex05_ShaderReflection.vcxproj  Ex05_ShaderReflection.vcxproj.filters
examples/Ex06_PipelineFactory/: CMakeLists.txt  Ex06_PipelineFactory.cpp  Ex06_PipelineFactory.vcxproj  Ex06_PipelineFactory.vcxproj.filters  log.txt
examples/Ex06_ShaderReflection/: Ex06_ShaderReflection.vcxproj  Ex06_ShaderReflection.vcxproj.filters
examples/Ex07_OnDemandDescriptorPool/: CMakeLists.txt  DescriptorPoolSize.txt  Ex07_OnDemandDescriptorPool.cpp  Ex07_OnDemandDescriptorPool.vcxproj  Ex07_OnDemandDescriptorPool.vcxproj.filters  log.txt
examples/Ex07_Swapchain/: Ex07_Swapchain.vcxproj  Ex07_Swapchain.vcxproj.filters  log.txt
examples/Ex08_Swapchain/: CMakeLists.txt  Ex08_Swapchain.cpp  Ex08_Swapchain.vcxproj  Ex08_Swapchain.vcxproj.filters  log.txt
examples/Ex09_Gui/: CMakeLists.txt  Ex09_Gui.cpp  Ex09_Gui.vcxproj  Ex09_Gui.vcxproj.filters  log.txt
examples/Ex10_Skybox/: CMakeLists.txt  Ex10_Example.cpp  Ex10_Example.h  Ex10_Skybox.cpp  Ex10_Skybox.vcxproj  Ex10_Skybox.vcxproj.filters  log.txt
examples/Ex11_PostProcessing/: CMakeLists.txt  DescriptorPoolSize.txt  Ex11_PostProcessing.cpp  Ex11_PostProcessing.vcxproj  Ex11_PostProcessing.vcxproj.filters  Ex11_PostProcessingExample.cpp  Ex11_PostProcessingExample.h  log.txt
examples/Ex12_Gltf/: DescriptorPoolSize.txt  Ex12_Gltf.cpp  Ex12_Gltf.vcxproj  Ex12_Gltf.vcxproj.filters  Ex12_GltfExample.cpp  Ex12_GltfExample.h  log.txt
examples/Ex12_PBR/: CMakeLists.txt  DescriptorPoolSize.txt  Ex12_PBR.cpp  Ex12_PBR.vcxproj  Ex12_PBR.vcxproj.filters  log.txt
examples/Ex13_FBX/: CMakeLists.txt  Ex13_FBX.cpp  Ex13_FBX.vcxproj  Ex13_FBX.vcxproj.filters  log.txt
examples/Ex14_Bistro/: CMakeLists.txt  DescriptorPoolSize.txt  Ex14_Bistro.cpp  Ex14_Bistro.vcxproj  Ex14_Bistro.vcxproj.filters  RenderGraph.json  log.txt
