# Add example subdirectories
add_subdirectory(Ex01_Context)
add_subdirectory(Ex02_Compute)
add_subdirectory(Ex03_Triangle13)
add_subdirectory(Ex04_Triangle11)
add_subdirectory(Ex05_ShaderReflection)
add_subdirectory(Ex06_PipelineFactory)
add_subdirectory(Ex07_OnDemandDescriptorPool)
add_subdirectory(Ex08_Swapchain)
add_subdirectory(Ex09_Gui)
add_subdirectory(Ex10_Skybox)
add_subdirectory(Ex11_PostProcessing)
add_subdirectory(Ex12_PBR)
add_subdirectory(Ex13_FBX)
add_subdirectory(Ex14_Bistro)
